trying copy to clipboard

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <meta charset="UTF-8">
 
-<pre id="result" style="font-size: 40">
-</pre>
+<textarea id="result" style="font-size: 40">
+</textarea>
 
 <script src="sha1.min.js"></script>
 <script src="lib.js"></script>
